# Trabajo_IHM

./: CMakeLists.txt  README.md  cerrarsesion.cpp  cerrarsesion.h  dlgsegundojugador.cpp  dlgsegundojugador.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pantallainicio.cpp  pantallainicio.h  pantallainicio.ui  pantallajuego.cpp  pantallajuego.h  pantallajuego.ui  pantallapartidas.cpp  pantallapartidas.h  pantallapartidas.ui  pantallaperfil.cpp  pantallaperfil.h  pantallaperfil.ui  pantallaranking.cpp  pantallaranking.h  pantallaranking.ui  pantallarecuperarclave.cpp  pantallarecuperarclave.h  pantallarecuperarclave.ui  pantallaregistro.cpp  pantallaregistro.h  pantallaregistro.ui  partidatablemodel.cpp  partidatablemodel.h  resources.qrc
estilos/: estilos.qss  estilos_oscuro.qss
lib/: connect4.h  player.h
persona/: persona.cpp  persona.h  personatablemodel.cpp  personatablemodel.h
